test/error/error.input64.zc
Undeclared enum type:fred on line 1
